--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   .due{color:#fff; background:#ef4444; padding:2px 6px; border-radius:8px; font-weight:800; font-size:11px}
   .table-scroll{width:100%; overflow:auto}
   #loading{display:none; align-items:center; gap:8px; font-weight:800}
-  #auth{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.06);backdrop-filter:blur(4px);z-index:9999}
+  #auth{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.06);backdrop-filter:blur(4px);z-index:9999}
   #auth .panel{width:360px;max-width:94%;background:var(--surface);border:1px solid var(--line);border-radius:14px;box-shadow:var(--shadow);padding:16px}
   .modal{position:fixed; inset:0; background:rgba(0,0,0,.55); display:none; align-items:center; justify-content:center; padding:18px; z-index:1000}
   .panel{max-width:900px; width:100%; background:var(--surface); border:1px solid var(--line); border-radius:16px; box-shadow:var(--shadow); display:flex; flex-direction:column; max-height:90vh}
@@ -282,8 +282,8 @@
 const SUPABASE_URL = 'https://xsdcprmwthmqzorojykl.supabase.co';
 const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzZGNwcm13dGhtcXpvcm9qeWtsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTc0NDU2ODUsImV4cCI6MjA3MzAyMTY4NX0.xql-MTN1szGVtdJkMmGxYRZ4mXNJ1a2vSXV2Fb1o4fw';
 
-/** (OPSIONALE) Webhook për njoftimin e asignimit me email (Make/Zapier/Server).
- *  Nëse lihet bosh, bëhet fallback në mailto: */
+/** (OPSIONALE) Webhook për njoftim asignimi (Make/Zapier/Server).
+ * Nëse lihet bosh, fallback në mailto: */
 const WEBHOOK_URL = '';
 
 const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY, {
@@ -296,7 +296,7 @@ let COMMENTS = {};
 let COUNTS = new Map();
 let CURRENT_ID = null;
 let PROFILES = []; // {id,email,full_name,role}
-let SELF = null;   // {id,email}
+let SELF = null; // {id,email}
 const BOOT = { running:false, started:false }; // guard
 const EL = sel => document.querySelector(sel);
 const ESC = s => (s||'').replace(/[&<>"']/g, m=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;', "'":'&#39;' }[m]));
@@ -305,17 +305,10 @@ function addDays(date,days){ const d=new Date(date); d.setDate(d.getDate()+days)
 function on(){ const e=EL('#loading'); if(e) e.style.display='inline-flex'; }
 function off(){ const e=EL('#loading'); if(e) e.style.display='none'; }
 
-/* Fail-safe: fik spinerin në error */
-window.addEventListener('error',  () => off());
+/* FAILSAFE: fik spinerin në error */
+window.addEventListener('error', () => off());
 window.addEventListener('unhandledrejection', () => off());
 setInterval(off, 10000);
-
-/* ===== Auth hash cleaner ===== */
-function clearAuthHash(){
-  if (window.location.hash && window.location.hash.includes('access_token')) {
-    history.replaceState({}, document.title, window.location.pathname + window.location.search);
-  }
-}
 
 /* ===== AUTH ===== */
 async function updateHeaderUser(session){
@@ -324,8 +317,7 @@ async function updateHeaderUser(session){
     SELF = { id: session.user.id, email: session.user.email };
     slot.textContent = '• ' + (session.user.email || '');
   }else{
-    SELF = null;
-    slot.textContent = '';
+    SELF = null; slot.textContent = '';
   }
 }
 async function requireSession(){
@@ -348,7 +340,7 @@ async function signIn(){
     const { error } = await sb.auth.signInWithPassword({ email, password });
     EL('#auth_msg').textContent = error ? (error.message || 'Login dështoi') : '';
     if(error) return;
-    clearAuthHash(); // ⬅️ PATCH
+    if (location.hash.includes('access_token')) history.replaceState({}, document.title, location.pathname + location.search);
     EL('#auth').style.display='none';
     const { data:{ session } } = await sb.auth.getSession();
     await updateHeaderUser(session);
@@ -364,13 +356,14 @@ async function signUp(){
 async function signOut(){
   on();
   try{
-    clearAuthHash(); // ⬅️ PATCH: shmang re-login automatik
     await sb.auth.signOut();
     LEADS = []; COMMENTS = {}; COUNTS = new Map(); PROFILES = []; render();
     EL('#user_slot').textContent = '';
     EL('#auth').style.display='flex';
   } finally { off(); }
 }
+
+/* Qëndro i lidhur midis refresh-eve */
 sb.auth.onAuthStateChange(async (_evt, session) => {
   await updateHeaderUser(session);
   if(session){ EL('#auth').style.display='none'; await bootstrapOnce(); }
@@ -382,7 +375,7 @@ async function bootstrapOnce(){
   if(BOOT.running) return;
   BOOT.running = true; BOOT.started = true; on();
   try{
-    PROFILES = await fetchProfiles();  // kërkon GRANT SELECT te profiles
+    PROFILES = await fetchProfiles(); // kërkon policy SELECT te profiles
     await refreshLeads();
   } catch(e){
     console.error('[bootstrap]', e);
@@ -399,7 +392,7 @@ async function fetchProfiles(){
       .order('email', {ascending:true});
     if(error){
       if(status===401 || status===403){
-        alert('S’lexohet "profiles". Sigurohu që ke: policy SELECT për authenticated + GRANT SELECT.');
+        alert('S’lexohet "profiles". Kontrollo GRANT + policy SELECT (duhet USING true).');
       }
       throw error;
     }
@@ -552,7 +545,7 @@ function render(){
   EL('#rows').innerHTML = arr.map(x=>{
     const due = x.next_follow_up && x.next_follow_up <= todayStr() ? `<span class="due">Due</span>` : '';
     const commentsCount = COUNTS.get(x.id) ?? 0;
-    const creatorEmail  = (PROFILES.find(p=>p.id===x.created_by)?.email) || '—';
+    const creatorEmail = (PROFILES.find(p=>p.id===x.created_by)?.email) || '—';
     const assignedEmail = (PROFILES.find(p=>p.id===x.assigned_to)?.email) || '';
     const assignedBadge = assignedEmail ? ` · <span class="tag" title="Assigned to">${ESC(assignedEmail)}</span>` : '';
     return `<tr>
@@ -888,8 +881,12 @@ async function refreshLeads(){
 
 /* ===== INIT ===== */
 document.addEventListener('DOMContentLoaded', async ()=>{
-  clearAuthHash(); // ⬅️ PATCH
-  const ok = await requireSession();
+  // Hiq fragment auth (#access_token=...) nëse Supabase kthen diçka në URL
+  if (window.location.hash && window.location.hash.includes('access_token')) {
+    history.replaceState({}, document.title, window.location.pathname + window.location.search);
+  }
+  // Pris paksa derisa Supabase të ngarkojë sesionin nga storage
+  let ok = await requireSession();
   if(ok){ await bootstrapOnce(); }
 });
 </script>
